# Bot

./: .env  Pipfile  app.py  bot.py  index.html  index.py  local_test.py  mail.py  pyproject.toml
templates/: index.html  login.html  main.html  policy.html  terms.html
